--- a/haxball_site/templates/core/include/sidebar_for_top_comments.html
+++ b/haxball_site/templates/core/include/sidebar_for_top_comments.html
@@ -35,7 +35,7 @@
             <div class="btn-group-vertical">
                  {% for comment in top_comments_day %}
                     <a type="button" href="{{ comment.post.get_absolute_url }}#r{{ comment.id }}" class="btn btn-secondary btn-block text-right px-1"
-                       data-toggle="tooltip" data-placement="right" title="от {{ comment.author }}">
+                       data-toggle="tooltip" data-placement="right" title="от {{ comment.author }} в {{ comment.post.title }}">
                         <div class="d-flex justify-content-between">
                             <div class="float-left">
                                 <span class="badge badge-pill badge-success">{{comment.votes.likes.count}}</span>
