--- a/haxball_site/templates/core/include/sidebar_for_users.html
+++ b/haxball_site/templates/core/include/sidebar_for_users.html
@@ -1,5 +1,5 @@
 {% load static %}
-    <div class="alert alert-primary users-online" role="alert">
+    <div class="alert alert-primary users-online m-0" role="alert">
         Сейчас онлайн: {{ users_online_count }}
     </div>
     <ul class="list-group list-group-flush">
