--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -36,7 +36,7 @@
                     <a class="dropdown-item" href="#">Бронь хоста</a>
                     <a class="dropdown-item" href="#">Переносы</a>
                     <a class="dropdown-item" href="#">Трансферы</a>
-                    <a class="dropdown-item" href="#">Свободные агенты</a>
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/55/free_agents">Свободные агенты</a>
                 </div>
             </li>
             <li class="nav-item">
