--- a/haxball_site/templates/core/profile/profile_detail.html
+++ b/haxball_site/templates/core/profile/profile_detail.html
@@ -34,13 +34,9 @@
                     <div class="m-b-10"><img src="{{ profile.avatar.url }}" width="100%" height="100%"
                                              class="img-radius" alt="User-Profile-Image"></div>
                     <h4 class="f-w-600">{{ profile.name }}
-                        {% if profile.name.is_superuser %}
-                            <img src="{% static "img/ico/my_crown_1.png" %}" height="16" width="16"
-                                 title="{% for group in profile.name.groups.all %} {{ group.name }} {% endfor %} ">
-                        {% elif profile.name.is_staff %}
-                            <img src="{% static "img/ico/sheriff_badge_1.png" %}" height="16" width="16"
-                                 title="{% for group in profile.name.groups.all %}{{ group.name }}{% endfor %}">
-                        {% endif %}
+                        {% for icon in profile.user_icon.all %}
+                            <img src="{{ icon.image.url }}" width="16px" height="16px" title="{{ icon.description }}">
+                        {% endfor %}
                     </h4>
                     <p class="mb-1">Без команды</p>
                     <p class="mb-0">Репутация {% karma profile %}</p>
