--- a/haxball_site/templates/core/profile/profile_detail.html
+++ b/haxball_site/templates/core/profile/profile_detail.html
@@ -60,7 +60,10 @@
                     </p>
                 </div>
             </div>
-            <div class="col-sm-8">
+            <div class="col-sm-8"
+                    {% if profile.background %}
+                        style="background-image:url({{ profile.background.url }}); background-size: cover;"
+                    {% endif %}>
                 <div class="card-block">
                     <h5 class="m-b-20 p-b-5 b-b-default f-w-600">Основная информация
                         {% if profile.name.username == user.username %}
