--- a/haxball_site/templates/core/include/comments.html
+++ b/haxball_site/templates/core/include/comments.html
@@ -140,9 +140,9 @@
 
                                 </span>
                                     </div>
-                                    <p class="m-b-5 m-t-10">
+                                    <div class="comment-body">
                                         {{ children.body|safe|linebreaks }}
-                                    </p>
+                                    </div>
                                 </div>
                             </div>
                         {% endfor %}
