--- a/haxball_site/templates/core/admins/admin_list.html
+++ b/haxball_site/templates/core/admins/admin_list.html
@@ -15,10 +15,10 @@
             <hr>
 
             {% for user in users %}
-                {% if user.is_superuser %}
-                    <h4><a href="{{ user.user_profile.get_absolute_url }}"><img
-                            src="{% static "img/ico/my_crown_1.png" %}" height="16" width="16"
-                            title="{% for group in user.groups.all %}{{ group.name }}{% endfor %}"> {{ user.username }}
+                    <h4><a href="{{ user.user_profile.get_absolute_url }}">
+                        {% for icon in user.user_profile.user_icon.all %}
+                            <img src="{{ icon.image.url }}" width="20px" height="20px" title="{{ icon.description }}">
+                        {% endfor %}{{ user.username }}
                     </a>
                         <span class="small text-muted">
                             {% for group in user.groups.all %}
@@ -26,20 +26,7 @@
                             {% endfor %}
                         </span>
                     </h4>
-                {% endif %}
 
-                {% if user.is_staff and not user.is_superuser %}
-                    <h4><a href="{{ user.user_profile.get_absolute_url }}"><img
-                            src="{% static "img/ico/sheriff_badge_1.png" %}" height="16" width="16"
-                            title="{% for group in user.groups.all %}{{ group.name }}{% endfor %}"> {{ user.username }}
-                    </a>
-                        <span class="small text-muted">
-                            {% for group in user.groups.all %}
-                                {{ group.name }}
-                            {% endfor %}
-                        </span>
-                    </h4>
-                {% endif %}
             {% endfor %}
 
         </div>
