--- a/haxball_site/templates/core/include/sidebar_for_top_comments.html
+++ b/haxball_site/templates/core/include/sidebar_for_top_comments.html
@@ -1,116 +1,119 @@
 {% load static %}
 
-<!--
-    <div class="card mt-2">
-        <div class="card-header text-center">
-            <h4 class="mb-0"><img src="{% static "img/ico/top_1.png" %}" height="37" width="37" style="vertical-align: top"
-                                  ; class="mr-1">Сегодня</h4>
-        </div>
-        <div class="btn-group-vertical">
-             {% for comment in top_comments %}
-                <a type="button" href="{{ comment.post.get_absolute_url }}" class="btn btn-secondary btn-block text-right px-1"
-                   data-toggle="tooltip" data-placement="right" title="от {{ comment.author }}">
-                    <div class="d-flex justify-content-between">
-                        <div>
-                            <span class="badge badge-pill badge-success">{{comment.votes.likes.count}}</span>
-                            {{ comment.post.title|truncatechars:22 }}
-                        </div>
-                        <img src="{% static "img/ico/reply.png" %}" height="30" width="30">
-                    </div>
-                </a>
-
-            {% endfor %}
-        </div>
-    </div>
--->
 
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-        <div class="card mt-2">
-            <div class="card-header text-center" style="border-radius: 20px 20px 0px 0;">
-                <h4 class="mb-0"><!--<img src="{% static "img/ico/top_1.png" %}" height="37" width="37" style="vertical-align: top"
-                                      ; class="mr-1">--><i class="fa fa-thumbs-o-up text-success mr-1" aria-hidden="true"></i>Сегодня</h4>
-            </div>
-            <div class="btn-group-vertical">
-                 {% for comment in top_comments_day %}
-                    <a type="button" href="{{ comment.post.get_absolute_url }}#r{{ comment.id }}" class="btn btn-secondary btn-block text-right px-1"
-                       data-toggle="tooltip" data-placement="right" title="от {{ comment.author }} в {{ comment.post.title }}">
-                        <div class="d-flex justify-content-between">
-                            <div class="float-left">
-                                <span class="badge badge-pill badge-success">{{comment.votes.likes.count}}</span>
-                                {% if comment.body|striptags  %}
-                                    {{ comment.body|striptags|truncatechars:20 }}
-                                {% else %}
-                                    <i>Картинка от</i> {{ comment.author }}
-                                {% endif %}
-                            </div>
-                            <img src="{% static "img/ico/reply.png" %}" height="30" width="30">
-                        </div>
+
+
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <div class="card mt-2" style="border-radius: 20px 20px 0px 0;">
+
+                <div class="card-header d-flex justify-content-between" style="border-radius: 20px 20px 0px 0;">
+                    <a class="d-inline" href="#carouselExampleControls" role="button" data-slide="prev"
+                       style="height: 100%">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    </a>
+                    <h4 class="mb-0 d-inline"><!--<img src="{% static "img/ico/top_1.png" %}" height="37" width="37" style="vertical-align: top"
+                                      ; class="mr-1">--><i class="fa fa-thumbs-o-up text-success mr-1"
+                                                           aria-hidden="true"></i>Сегодня</h4>
+                    <a class="d-inline" href="#carouselExampleControls" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     </a>
 
-                {% endfor %}
+                </div>
+
+                <div class="btn-group-vertical">
+                    {% for comment in top_comments_day %}
+                        <a type="button" href="{{ comment.post.get_absolute_url }}#r{{ comment.id }}"
+                           class="btn btn-secondary btn-block text-right px-1"
+                           data-toggle="tooltip" data-placement="right"
+                           title="от {{ comment.author }} в {{ comment.post.title }}">
+                            <div class="d-flex justify-content-between">
+                                <div class="float-left">
+                                    <span class="badge badge-pill badge-success">{{ comment.votes.likes.count }}</span>
+                                    {% if comment.body|striptags %}
+                                        {{ comment.body|striptags|truncatechars:20 }}
+                                    {% else %}
+                                        <i><img src="{% static "img/ico/image_48.png" %}" height="23" width="23"> от</i>
+                                        {{ comment.author }}
+                                    {% endif %}
+                                </div>
+                                <img src="{% static "img/ico/reply.png" %}" height="30" width="30">
+                            </div>
+                        </a>
+
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="card mt-2" style="border-radius: 20px 20px 0px 0;">
+                <div class="card-header d-flex justify-content-between" style="border-radius: 20px 20px 0px 0;">
+                    <a class="d-inline" href="#carouselExampleControls" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    </a>
+                    <h4 class="mb-0"><i class="fa fa-thumbs-o-up text-success mr-1" aria-hidden="true"></i>Месяц</h4>
+                    <a class="d-inline" href="#carouselExampleControls" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    </a>
+                </div>
+                <div class="btn-group-vertical">
+                    {% for comment in top_comments_month %}
+                        <a type="button" href="{{ comment.post.get_absolute_url }}#r{{ comment.id }}"
+                           class="btn btn-secondary btn-block text-right px-1"
+                           data-toggle="tooltip" data-placement="right"
+                           title="от {{ comment.author }} в {{ comment.post.title }}">
+                            <div class="d-flex justify-content-between">
+                                <div class="float-left">
+                                    <span class="badge badge-pill badge-success">{{ comment.votes.likes.count }}</span>
+                                    {% if comment.body|striptags %}
+                                        {{ comment.body|striptags|truncatechars:20 }}
+                                    {% else %}
+                                        <i>Картинка от</i> {{ comment.author }}
+                                    {% endif %}
+                                </div>
+                                <img src="{% static "img/ico/reply.png" %}" height="30" width="30">
+                            </div>
+                        </a>
+
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="card mt-2" style="border-radius: 20px 20px 0px 0;">
+                <div class="card-header d-flex justify-content-between" style="border-radius: 20px 20px 0px 0;">
+                    <a class="d-inline" href="#carouselExampleControls" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    </a>
+                    <h4 class="mb-0"><i class="fa fa-thumbs-o-up text-success mr-1" aria-hidden="true"></i>Год</h4>
+                    <a class="d-inline" href="#carouselExampleControls" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    </a>
+                </div>
+                <div class="btn-group-vertical">
+                    {% for comment in top_comments_year %}
+                        <a type="button" href="{{ comment.post.get_absolute_url }}#r{{ comment.id }}"
+                           class="btn btn-secondary btn-block text-right px-1"
+                           data-toggle="tooltip" data-placement="right"
+                           title="от {{ comment.author }} в {{ comment.post.title }}">
+                            <div class="d-flex justify-content-between">
+                                <div class="float-left">
+                                    <span class="badge badge-pill badge-success">{{ comment.votes.likes.count }}</span>
+                                    {% if comment.body|striptags %}
+                                        {{ comment.body|striptags|truncatechars:20 }}
+                                    {% else %}
+                                        <i>Картинка от</i> {{ comment.author }}
+                                    {% endif %}
+                                </div>
+                                <img src="{% static "img/ico/reply.png" %}" height="30" width="30">
+                            </div>
+                        </a>
+
+                    {% endfor %}
+                </div>
             </div>
         </div>
     </div>
-    <div class="carousel-item">
-     <div class="card mt-2">
-            <div class="card-header text-center">
-                <h4 class="mb-0"><i class="fa fa-thumbs-o-up text-success mr-1" aria-hidden="true"></i>Месяц</h4>
-            </div>
-            <div class="btn-group-vertical">
-                 {% for comment in top_comments_month %}
-                    <a type="button" href="{{ comment.post.get_absolute_url }}#r{{ comment.id }}" class="btn btn-secondary btn-block text-right px-1"
-                       data-toggle="tooltip" data-placement="right" title="от {{ comment.author }} в {{ comment.post.title }}">
-                        <div class="d-flex justify-content-between">
-                            <div class="float-left">
-                                <span class="badge badge-pill badge-success">{{comment.votes.likes.count}}</span>
-                                {% if comment.body|striptags  %}
-                                    {{ comment.body|striptags|truncatechars:20 }}
-                                {% else %}
-                                    <i>Картинка от</i> {{ comment.author }}
-                                {% endif %}
-                            </div>
-                            <img src="{% static "img/ico/reply.png" %}" height="30" width="30">
-                        </div>
-                    </a>
 
-                {% endfor %}
-            </div>
-        </div>    </div>
-    <div class="carousel-item">
-           <div class="card mt-2">
-            <div class="card-header text-center">
-                <h4 class="mb-0"><i class="fa fa-thumbs-o-up text-success mr-1" aria-hidden="true"></i>Год</h4>
-            </div>
-            <div class="btn-group-vertical">
-                 {% for comment in top_comments_year %}
-                    <a type="button" href="{{ comment.post.get_absolute_url }}#r{{ comment.id }}" class="btn btn-secondary btn-block text-right px-1"
-                       data-toggle="tooltip" data-placement="right" title="от {{ comment.author }} в {{ comment.post.title }}">
-                        <div class="d-flex justify-content-between">
-                            <div class="float-left">
-                                <span class="badge badge-pill badge-success">{{comment.votes.likes.count}}</span>
-                                {% if comment.body|striptags  %}
-                                    {{ comment.body|striptags|truncatechars:20 }}
-                                {% else %}
-                                    <i>Картинка от</i> {{ comment.author }}
-                                {% endif %}
-                            </div>
-                            <img src="{% static "img/ico/reply.png" %}" height="30" width="30">
-                        </div>
-                    </a>
-
-                {% endfor %}
-            </div>
-        </div>
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
 </div>
