--- a/haxball_site/templates/core/include/sidebar_for_top_comments.html
+++ b/haxball_site/templates/core/include/sidebar_for_top_comments.html
@@ -11,13 +11,13 @@
                 <div class="card-header d-flex justify-content-between" style="border-radius: 20px 20px 0px 0;">
                     <a class="d-inline" href="#carouselExampleControls" role="button" data-slide="prev"
                        style="height: 100%">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <i class="fa fa-arrow-circle-left" aria-hidden="true" style="height: 100%; font-size: 24px;"></i>
                     </a>
                     <h4 class="mb-0 d-inline"><!--<img src="{% static "img/ico/top_1.png" %}" height="37" width="37" style="vertical-align: top"
                                       ; class="mr-1">--><i class="fa fa-thumbs-o-up text-success mr-1"
                                                            aria-hidden="true"></i>Сегодня</h4>
                     <a class="d-inline" href="#carouselExampleControls" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <i class="fa fa-arrow-circle-right" aria-hidden="true" style="height: 100%; font-size: 24px;"></i>
                     </a>
 
                 </div>
@@ -50,11 +50,11 @@
             <div class="card mt-2" style="border-radius: 20px 20px 0px 0;">
                 <div class="card-header d-flex justify-content-between" style="border-radius: 20px 20px 0px 0;">
                     <a class="d-inline" href="#carouselExampleControls" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <i class="fa fa-arrow-circle-left" aria-hidden="true" style="height: 100%; font-size: 24px;"></i>
                     </a>
                     <h4 class="mb-0"><i class="fa fa-thumbs-o-up text-success mr-1" aria-hidden="true"></i>Месяц</h4>
                     <a class="d-inline" href="#carouselExampleControls" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <i class="fa fa-arrow-circle-right" aria-hidden="true" style="height: 100%; font-size: 24px;"></i>
                     </a>
                 </div>
                 <div class="btn-group-vertical">
@@ -85,11 +85,11 @@
             <div class="card mt-2" style="border-radius: 20px 20px 0px 0;">
                 <div class="card-header d-flex justify-content-between" style="border-radius: 20px 20px 0px 0;">
                     <a class="d-inline" href="#carouselExampleControls" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <i class="fa fa-arrow-circle-left" aria-hidden="true" style="height: 100%; font-size: 24px;"></i>
                     </a>
                     <h4 class="mb-0"><i class="fa fa-thumbs-o-up text-success mr-1" aria-hidden="true"></i>Год</h4>
                     <a class="d-inline" href="#carouselExampleControls" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <i class="fa fa-arrow-circle-right" aria-hidden="true" style="height: 100%; font-size: 24px;"></i>
                     </a>
                 </div>
                 <div class="btn-group-vertical">
