--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -53,11 +53,11 @@
                     Архив
                 </a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">ЧР #1</a>
-                    <a class="dropdown-item" href="#">ЧР #2</a>
-                    <a class="dropdown-item" href="#">ЧР #3</a>
-                    <a class="dropdown-item" href="#">ЧР #4</a>
-                    <a class="dropdown-item" href="#">ЛЧ #1</a>
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/46/season_1">ЧР #1</a>
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/47/season_2">ЧР #2</a>
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/48/season_3">ЧР #3</a>
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/49/season_4">ЧР #4</a>
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/50/champions_league_1">ЛЧ #1</a>
 
                 </div>
             </li>
