--- a/haxball_site/templates/core/forum/add_post.html
+++ b/haxball_site/templates/core/forum/add_post.html
@@ -26,9 +26,7 @@
 
     </div>
     {% else %}
-        <h1 class="display-1 text-center">Куда ЛЕЗЕМ</h1>
-        <h1 class="display-1 text-center text-danger">ЁПТА</h1>
-        <h1 class="display-1 text-center text-warning">ААААААА?</h1>
+        <h1 class="text-center text-danger">Только авторизованные пользоваватели могут создавать посты</h1>
     {% endif %}
 
 </div>
