--- a/haxball_site/templates/core/post/detail.html
+++ b/haxball_site/templates/core/post/detail.html
@@ -25,7 +25,7 @@
     <div class="card mb-4 mt-2" style="border-radius: 25px">
         <div class="card-header" style="border-radius: 25px">
             <h4 class="card-title mb-1">{{ post.title }}
-                {% if post.author == user %}
+                {% if post.author == user or user.is_superuser %}
                     <a href="{% url 'core:post_edit' post.slug post.id %}"
                        class="text-warning small text-right"><i class="fa fa-pencil" aria-hidden="true"></i></a>
                 {% endif %}
