--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -35,7 +35,7 @@
                     <a class="dropdown-item" href="#">Регламент</a>
                     <a class="dropdown-item" href="#">Бронь хоста</a>
                     <a class="dropdown-item" href="#">Переносы</a>
-                    <a class="dropdown-item" href="#">Трансферы</a>
+                    <a class="dropdown-item" href="{% url 'tournament:free_agent' %}">Трансферы</a>
                     <a class="dropdown-item" href="https://www.cis-haxball.com/post/55/free_agents">Свободные агенты</a>
                 </div>
             </li>
