--- a/haxball_site/static/core/profile/profile.css
+++ b/haxball_site/static/core/profile/profile.css
@@ -24,8 +24,7 @@ body {
 }
 
 .user-card-full .user-profile {
-    border-radius: 5px 0 0 5px
-    margin-bottom: 30px
+    border-radius: 5px 0 0 5px;
 }
 
 .bg-c-lite-green {
