--- a/haxball_site/templates/account/signup.html
+++ b/haxball_site/templates/account/signup.html
@@ -25,7 +25,7 @@
                     <label for="exampleInputEmail1" class="mb-1">{{ form.errors.username }}</label>
                     <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
                            name="username">
-                    <small id="emailHelp" class="form-text text-muted">Ваш игровой никнейм:</small>
+                    <small id="emailHelp" class="form-text text-muted">Ваш игровой никнейм</small>
                 </div>
                 <div class="form-group mb-1">
                     <label for="exampleInputEmail2" class="mb-1">Email-адрес</label>
