--- a/haxball_site/templates/core/post/edit_comment.html
+++ b/haxball_site/templates/core/post/edit_comment.html
@@ -18,8 +18,7 @@
 
 {% block comments %}
     <div class="mt-3">
-        <form method="post" id="addcomment" class="text-center">
-            {% csrf_token %}
+            {% csrf_token %}-->
             <form method="POST">
                 {% csrf_token %}
                 {{ comment_form.media }}
@@ -28,7 +27,7 @@
                     <button type="submit" class="btn btn-primary mb-5 mr-4">Отправить</button>
                 </div>
             </form>
-        </form>
+
     </div>
 
 {% endblock %}
