--- a/haxball_site/templates/tournament/free_agent/free_agents_list.html
+++ b/haxball_site/templates/tournament/free_agent/free_agents_list.html
@@ -1,16 +1,145 @@
 {% extends "core/home.html" %}
 {% load static %}
-{% load user_tags %}
+{% load tournament_extras %}
 {% block styles %}
-    <link rel="stylesheet" type="text/css" href="{% static "core/profile/profile.css" %}">
     <link rel="stylesheet" type="text/css" href="{% static "core/core.css" %}">
+    <link rel="stylesheet" type="text/css" href="{% static "tournament/free_agent/free_agent_list.css" %}">
+
     <style>
         body {
             background-image: url({% static "img/backgrounds/bg-light-4860.png" %})
         }
     </style>
 {% endblock %}
+{% block scripts %}
 
+{% endblock %}
 {% block profile_of_user %}
-    <h1>В разработке</h1>
+    <div class="card mb-2 mt-2" style="border-radius: 10px">
+        <h2 class="text-center my-2"><i class="fa fa-search-plus text-success" aria-hidden="true"></i>
+ Команды/свободных агентов</h2>
+        <div class="container-fluid p-0 mx-0">
+            <div class="table-fix table-responsive">
+                <table class="table table-hover" style="max-width: 100%">
+                    <thead class="thead-dark py-2 text-center">
+                    <tr>
+                        <th scope="col">Игрок</th>
+                        <th scope="col">Позиция</th>
+                        <th scope="col">Контакты</th>
+                        <th scope="col">Комментарий</th>
+                        <th scope="col">Дата</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for agent in agents %}
+                        <tr>
+                            <th scope="row">
+                                <span class="round">
+                                <img src="{{ agent.player.user_profile.avatar.url }}"
+                                     alt="{{ agent.player.username }}" width="30">
+                            </span><a href="{{ agent.player.user_profile.get_absolute_url }}">{{ agent.player }}</a>
+                            </th>
+                            <td class="text-center" style="font-size: 12px">{{ agent.position_main }}</td>
+                            <td>
+                                <div class="d-flex justify-content-center">
+                                    {% if agent.player.user_profile.vk %}
+                                        <a href="https://vk.com/{{ agent.player.user_profile.vk }}" target="_blank"><img
+                                                src="{% static "img/ico/vk_1.png" %}" height="20" width="20"
+                                                title="{{ agent.player.user_profile.vk }}"></a>
+                                    {% endif %}
+                                    {% if agent.player.user_profile.discord %}
+                                        <div><img src="{% static "img/ico/discord_1.png" %}"
+                                                  onclick="navigator.clipboard.writeText({{ agent.player.user_profile.discord }});
+                                                          alert('Скопировано ' + {{ agent.player.user_profile.discord }});"
+                                                  id=discord
+                                                  height="20" width="20"
+                                                  data-title="{{ agent.player.user_profile.discord }}"
+                                                  title="{{ agent.player.user_profile.discord }}"
+                                                  style="cursor: pointer;"></div>
+                                    {% endif %}
+                                    {% if agent.player.user_profile.telegram %}
+                                        <a href="https://t.me/{{ agent.player.user_profile.telegram }}" target="_blank"><img
+                                                src="{% static "img/ico/tg_1.png" %}" height="20" width="20"
+                                                title="{{ agent.player.user_profile.telegram }}"></a>
+                                    {% endif %}
+                                    {% if not agent.player.user_profile.vk and not agent.player.user_profile.discord and not agent.player.user_profile.telegram %}
+                                        <i class="fa fa-minus text-danger text-center" aria-hidden="true"></i>
+                                    {% endif %}
+                                </div>
+                            </td>
+                            <td>
+                                <div style="width: 100%; font-size: 13px">{{ agent.description }}</div>
+                            </td>
+                            <td style="font-size: small">{{ agent.created|date:"SHORT_DATE_FORMAT" }}</td>
+                        </tr>
+
+
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
+    {% if user.is_authenticated %}
+        {% if not user|user_in_agents and user|can_add_entry %}
+            <div class="card bg-c-lite-unknown" style="border-radius: 30px">
+                <form method="POST" class="row p-3">
+                    {% csrf_token %}
+                    {{ form_create.as_p }}
+                    <div class="form-group col-3">
+                        <label for="pos_main" class="text-center h6 mb-1">Позиция</label>
+                        <select id="pos_main" class="form-control" name="position_main">
+                            <option selected value="Любая">Любая</option>
+                            <option value="Нападающий">Нападающий</option>
+                            <option value="Опорник">Опорник</option>
+                            <option value="Вратарь">Вратарь</option>
+                            <option value="Верхний нападающий">Верхний нападающий</option>
+                            <option value="Нижний нападающий">Нижний нападающий</option>
+                            <option value="Нападающий/опорник">Нападающий/Опорник</option>
+                            <option value="Нападающий/вратарь">Нападающий/Вратарь</option>
+                            <option value="Задняя линия">Задняя линия</option>
+                        </select>
+                    </div>
+
+                    <div class="form-group col-9 mb-1">
+                        <label for="descrip" class="mb-1 h6">Краткий комментарий</label>
+                        <input id="descrip" type="text" class="form-control" name="description">
+                    </div>
+
+
+                    <div class="d-flex justify-content-end w-100">
+                        <button type="submit" class="btn btn-primary mr-3">Оставить заявку</button>
+                    </div>
+
+                </form>
+            </div>
+        {% elif user|user_in_agents %}
+            <div class="d-flex justify-content-center">
+                <div class="d-inline-flex justify-content-center bg-c-lite-unknown p-3" style="border-radius: 30px">
+                    <form method="POST" action="{% url 'tournament:remove_entry' user.user_free_agent.id %}">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-primary mr-1">Снять заявку</button>
+                    </form>
+
+                    <form method="POST" action="{% url 'tournament:update_entry' user.user_free_agent.id %}">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-success ml-1"
+                                {% if not user|can_add_entry %}disabled
+                                title="Сможете через {{ user|date_can|timeuntil }}"
+                                style="cursor: pointer" {% endif %}
+                        >Поднять заявку
+                        </button>
+                    </form>
+
+                </div>
+            </div>
+        {% else %}
+            <div class="d-flex justify-content-center">
+                <div class="d-inline-flex justify-content-center bg-c-lite-unknown p-3" style="border-radius: 30px">
+                    <h6 class="mb-0">Вы сможете оставить заявку через {{ user|date_can|timeuntil }}</h6>
+                </div>
+            </div>
+        {% endif %}
+    {% endif %}
 {% endblock %}
