--- a/haxball_site/static/tournament/free_agent/free_agent_list.css
+++ b/haxball_site/static/tournament/free_agent/free_agent_list.css
@@ -1,4 +1,4 @@
-.table-fix { overflow-y: auto; height: 600px; }
+.table-fix { overflow-y: auto; height: 570px; }
 .table-fix thead th { position: sticky; top: 0; }
 table  { border-collapse: collapse; width: 100%; }
 .table td, .table th {
@@ -8,4 +8,9 @@ table  { border-collapse: collapse; width: 100%; }
 .bg-c-lite-unknown {
     background: -webkit-gradient(linear, left top, right top, from(#8d3e11), to(#3f6804));
     background: linear-gradient(to right, #ea99d4, rgba(126, 255, 239, 0.49))
+}
+
+.main-col{
+    padding-left: 0;
+    padding-right: 1%;
 }
