--- a/haxball_site/templates/core/post/detail.html
+++ b/haxball_site/templates/core/post/detail.html
@@ -1,7 +1,7 @@
 {% extends "core/home.html" %}
 
 {% block title %}
-    {{ post.title }}
+    {{ post.title }}    cis-haxball.com
 {% endblock %}
 {% load static %}
 {% load user_tags %}
