--- a/haxball_site/templates/core/profile/profile_detail.html
+++ b/haxball_site/templates/core/profile/profile_detail.html
@@ -22,7 +22,7 @@
     </script>
 {% endblock %}
 
-{% block title %}Профиль {{ profile.name }} {% endblock %}
+{% block title %}Профиль {{ profile.name }}      cis-haxball.com {% endblock %}
 
 {% block profile_of_user %}
     <hr>
