--- a/haxball_site/templates/core/tournaments/tournaments_list.html
+++ b/haxball_site/templates/core/tournaments/tournaments_list.html
@@ -101,7 +101,7 @@
 
 {% endblock %}
 
-{% block title %}Турниры{% endblock %}
+{% block title %}Турниры        cis-haxball.com{% endblock %}
 
 {% block postlist %}
 <div class="card my-2"
